--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="mostwanted-container">
                 <img style="height: 300px; width: 300px;"
                     src="https://i.pinimg.com/236x/df/9c/f4/df9cf47157f80bfd649467f8258f7bd2.jpg" alt="eror">
-                <img class="mostwanted-icon" src="img/icons/redheart.png" alt=""> \
+                <img class="mostwanted-icon" src="img/icons/redheart.png" alt=""> 
                 <p>Sale</p>
             </div>
         </div>
